address deprecation warnings when compiling configuration tool with openjdk 11
Signed-off-by: Erik Boasson <eb@ilities.com>